doc: fix some errors in documentacion
